<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Foraging">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toTopOf="parent" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:src="@drawable/daffodil"
            android:contentDescription="@string/logo"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="230dp"
            android:layout_height="150dp"
            android:includeFontPadding="true"
            android:text="common mushroom"
            android:textAlignment="center"
            android:textColor="@color/txt_color"
            android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/season1"
            android:text="@string/season"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/season"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/season"
            android:text="@string/holder"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/season1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/sell1"
            android:text="@string/sellp"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/growTime"
            app:layout_constraintTop_toBottomOf="@id/season1" />

        <TextView
            android:id="@+id/growTime"
            android:text="@string/holder"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/sell1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/season" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>