<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".FestivalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/festimg"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:layout_marginStart="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />

        <TextView
            android:id="@+id/name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/txt_color"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:includeFontPadding="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/festimg"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />

        <TextView
            android:id="@+id/seasont"
            android:text="@string/season"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/season"
            app:layout_constraintTop_toBottomOf="@id/festimg" />

        <TextView
            android:id="@+id/season"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/seasont"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/datet"
            android:text="@string/date"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/seasont" />

        <TextView
            android:id="@+id/date"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/datet"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/season" />

        <TextView
            android:id="@+id/locationt"
            android:text="@string/location"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/datet" />

        <TextView
            android:id="@+id/location"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/locationt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <TextView
            android:id="@+id/timet"
            android:text="@string/time"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="160dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/locationt" />

        <TextView
            android:id="@+id/time"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/txt_color"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toRightOf="@id/timet"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>