<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".CropActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/img"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:layout_marginStart="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/name"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold|italic"
            android:textColor="@color/txt_color"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:includeFontPadding="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/growTime1"
            android:text="@string/gtime"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/growTime"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toRightOf="@id/growTime1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/regrowTime1"
            android:text="@string/rgtime"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/growTime1" />

        <TextView
            android:id="@+id/regrowTime"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toRightOf="@id/regrowTime1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/growTime" />


        <TextView
            android:id="@+id/sellPrice1"
            android:text="@string/sellp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regrowTime1" />

        <TextView
            android:id="@+id/sellPrice"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toRightOf="@id/sellPrice1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regrowTime" />

        <TextView
            android:id="@+id/buy_at"
            android:text="Buy at:"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/txt_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sellPrice"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


        <TextView
            android:id="@+id/pierrePrice1"
            android:text="@string/pPrice"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buy_at" />

        <TextView
            android:id="@+id/pierrePrice"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toRightOf="@id/pierrePrice1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buy_at" />

        <TextView
            android:id="@+id/jojaPrice1"
            android:text="@string/jPrice"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pierrePrice1" />

        <TextView
            android:id="@+id/jojaPrice"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/txt_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintLeft_toRightOf="@id/jojaPrice1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pierrePrice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="Bookmark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:textColor="@color/txt_color"
            android:textSize="23sp"
            android:background="@color/btn_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jojaPrice" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>